# csvcc

./: .clang-format  .gitignore  CMakeLists.txt  Directory.build.props  README.md  _config.yml  run_cmake.ps1
examples/: CMakeLists.txt  basic_usage.cpp  example_file.csv
src/: csvfile.hpp  csvrow.hpp  parse.hpp
tests/: CMakeLists.txt  gtest_parse.cpp
